# win-sdr-thumbs

./: .gitignore  Build.bat  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  release.yml
Build-And-Test-Tools/: Build-And-ReRegister.bat  Register.bat  RunBenchmark.bat  Unregister.bat  thumbnail-gen-benchmark.ps1  win_svg_thumbs.wxs
Build-And-Test-Tools/Benchmarking/: thumbnail-gen-benchmark.ps1
Build-And-Test-Tools/MSI Installer/: Build MSI Installer.bat  MSI Installer Build Notes.txt  Update Version Info.bat  win_svg_thumbs.wxs
Testing/: cargo.toml
Testing/src/: main.rs
src/: lib.rs
