[package]
name = "win-svg-thumbs"
version = "1.5.0"
edition = "2021"

[profile.release]
# Include debug symbols
debug = true

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_System_Com",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Imaging",
    "Win32_Storage",
    "Win32_System_Com",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_Security"
]}

windows-core = "0.61"
windows-registry = "0.5"

# Unused but good to remember
#windows-sys = { version = "0.60", features = ["Win32_System_Registry","Win32_Security"]}
#windows-implement = "0.61"
